--- a/src/smpi/smpiff.in
+++ b/src/smpi/smpiff.in
@@ -31,7 +31,7 @@ filter_and_compile() {
     list_add TMPFILES "${TMPFILE}"
     #replace "program main_name by subroutine user\_main (and the end clause as well)"
     if [ $TRACE_CALL_LOCATION -gt 0 ]; then
-      echo "#include \"/tmp/local/include/smpi/smpi_extended_traces_fortran.h\"" > ${TMPFILE}
+      echo "#include \"@includedir@/smpi/smpi_extended_traces_fortran.h\"" > ${TMPFILE}
     echo "#line 1 \"${ARG}\"" >> ${TMPFILE}
     fi
     sed 's/[[:space:]]\{6\}[[:space:]]*\(end \)\{0,1\}program[[:space:]]*\([a-zA-Z0-9\-\_]*\)/      \1subroutine user_main /gI;s/[[:space:]]*use[[:space:]]*mpi/\include \"mpif\.h\" /gI' "${ARG}" >> "${TMPFILE}"
